--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,4 @@ python_requires = >=3.9
 [options.entry_points]
 console_scripts =
     ament_lint_cmake_hook = ament_lint_pre_commit_hooks.ament_lint_cmake_hook:main
+    ament_cpplint_hook = ament_lint_pre_commit_hooks.ament_cpplint_hook:main
