--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,4 @@ console_scripts =
     ament_lint_cmake_hook = ament_lint_pre_commit_hooks.ament_lint_cmake_hook:main
     ament_cpplint_hook = ament_lint_pre_commit_hooks.ament_cpplint_hook:main
     ament_uncrustify_hook = ament_lint_pre_commit_hooks.ament_uncrustify_hook:main
+    ament_xmllint_hook = ament_lint_pre_commit_hooks.ament_xmllint_hook:main
