--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,4 @@ console_scripts =
     ament_cpplint_hook = ament_lint_pre_commit_hooks.ament_cpplint_hook:main
     ament_uncrustify_hook = ament_lint_pre_commit_hooks.ament_uncrustify_hook:main
     ament_xmllint_hook = ament_lint_pre_commit_hooks.ament_xmllint_hook:main
+    ament_flake8_hook = ament_lint_pre_commit_hooks.ament_flake8_hook:main
