--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -25,3 +25,10 @@
     language: system
     entry: ament_xmllint_hook
     types: [xml]
+
+-   id: ament_flake8_hook
+    name: ament_flake8_hook
+    description: Check Python code style using flake8.
+    language: system
+    entry: ament_flake8_hook
+    types: [python]
