--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ classifiers =
 packages = find:
 install_requires =
     docker
+    pydocstyle
 python_requires = >=3.9
 
 [options.entry_points]
@@ -29,3 +30,4 @@ console_scripts =
     ament_uncrustify_hook = ament_lint_pre_commit_hooks.ament_uncrustify_hook:main
     ament_xmllint_hook = ament_lint_pre_commit_hooks.ament_xmllint_hook:main
     ament_flake8_hook = ament_lint_pre_commit_hooks.ament_flake8_hook:main
+    ament_pep257_hook = ament_lint_pre_commit_hooks.ament_pep257_hook:main
