--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -32,3 +32,10 @@
     language: system
     entry: ament_flake8_hook
     types: [python]
+
+-   id: ament_pep257_hook
+    name: ament_pep257_hook
+    description: Check Python code style using pep257.
+    language: system
+    entry: ament_pep257_hook
+    types: [python]
