--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,6 +63,14 @@ repos:
     #     entry: ament_pep257_hook
     #     types: [python]
 
+    # -   id: ament_mypy_hook
+    #     name: ament_mypy_hook
+    #     description: Check Python code style using mypy.
+    #     language: system
+    #     entry: ament_mypy_hook
+    #     types: [python]
+    #     args: ["--config", "pyproject.toml"]
+
 # -   repo: git@github.com:leander-dsouza/ament-lint-pre-commit-hooks.git
 #     rev: v0.0.0
 #     hooks:
