--- a/ament_lint_pre_commit_hooks/Dockerfile
+++ b/ament_lint_pre_commit_hooks/Dockerfile
@@ -4,6 +4,7 @@ FROM ros:rolling
 RUN apt-get update && \
     apt-get install -y \
     ros-rolling-ament-lint \
+    ros-rolling-ament-mypy \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /workspace
