--- a/setup.cfg
+++ b/setup.cfg
@@ -31,3 +31,4 @@ console_scripts =
     ament_xmllint_hook = ament_lint_pre_commit_hooks.ament_xmllint_hook:main
     ament_flake8_hook = ament_lint_pre_commit_hooks.ament_flake8_hook:main
     ament_pep257_hook = ament_lint_pre_commit_hooks.ament_pep257_hook:main
+    ament_mypy_hook = ament_lint_pre_commit_hooks.ament_mypy_hook:main
