Used repo as a pre-commit hook
Signed-off-by: Leander Stephen D'Souza <leanderdsouza1234@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = ament_lint_pre_commit_hooks
-version = 0.0.0
+version = 0.0.2
 description = Some out-of-the-box hooks for ament lint pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/leander-dsouza/ament-lint-pre-commit-hooks
+url = git@github.com:leander-dsouza/ament-lint-pre-commit-hooks.git
 author = Leander Stephen Desouza
 author_email = leanderdsouza1234@gmail.com
 license = MIT
