Restructured hooks to run after installation.
Signed-off-by: Leander Stephen D'Souza <leanderdsouza1234@gmail.com>

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,48 +1,48 @@
 -   id: ament_lint_cmake_hook
     name: ament_lint_cmake_hook
     description: Check CMake code style using cmakelint.
-    language: system
+    language: python
     entry: ament_lint_cmake_hook
     types: [cmake]
 
 -   id: ament_cpplint_hook
     name: ament_cpplint_hook
     description: Code style checking using cpplint.
-    language: system
+    language: python
     entry: ament_cpplint_hook
     types: [c++]
 
 -   id: ament_uncrustify_hook
     name: ament_uncrustify_hook
     description: Code style checking using uncrustify.
-    language: system
+    language: python
     entry: ament_uncrustify_hook
     types: [c++]
 
 -   id: ament_xmllint_hook
     name: ament_xmllint_hook
     description: Check XML markup using xmllint.
-    language: system
+    language: python
     entry: ament_xmllint_hook
     types: [xml]
 
 -   id: ament_flake8_hook
     name: ament_flake8_hook
     description: Check Python code style using flake8.
-    language: system
+    language: python
     entry: ament_flake8_hook
     types: [python]
 
 -   id: ament_pep257_hook
     name: ament_pep257_hook
     description: Check Python code style using pep257.
-    language: system
+    language: python
     entry: ament_pep257_hook
     types: [python]
 
 -   id: ament_mypy_hook
     name: ament_mypy_hook
     description: Check Python code style using mypy.
-    language: system
+    language: python
     entry: ament_mypy_hook
     types: [python]
