--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = ament_lint_pre_commit_hooks
-version = 0.0.2
+version = 0.0.3
 description = Some out-of-the-box hooks for ament lint pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = git@github.com:leander-dsouza/ament-lint-pre-commit-hooks.git
+url = https://github.com/leander-dsouza/ament-lint-pre-commit-hooks.git
 author = Leander Stephen Desouza
 author_email = leanderdsouza1234@gmail.com
 license = MIT
@@ -17,11 +17,11 @@ classifiers =
     Programming Language :: Python :: Implementation :: PyPy
 
 [options]
-packages = find:
+packages = ament_lint_pre_commit_hooks
 install_requires =
     docker
     pydocstyle
-python_requires = >=3.9
+python_requires = >=3.10
 
 [options.entry_points]
 console_scripts =
@@ -32,3 +32,15 @@ console_scripts =
     ament_flake8_hook = ament_lint_pre_commit_hooks.ament_flake8_hook:main
     ament_pep257_hook = ament_lint_pre_commit_hooks.ament_pep257_hook:main
     ament_mypy_hook = ament_lint_pre_commit_hooks.ament_mypy_hook:main
+
+[mypy]
+explicit_package_bases = true
+
+[mypy-pydocstyle.*]
+ignore_missing_imports = true
+
+[mypy-docker]
+ignore_missing_imports = true
+
+[mypy-setuptools]
+ignore_missing_imports = true
