Fix missing dockerfile (#10)
* Added abs path for dockerfile.

Signed-off-by: Leander Stephen D'Souza <leanderdsouza1234@gmail.com>

* Bumped up version.

Signed-off-by: Leander Stephen D'Souza <leanderdsouza1234@gmail.com>

---------

Signed-off-by: Leander Stephen D'Souza <leanderdsouza1234@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,8 +17,8 @@ repos:
     hooks:
     -   id: codespell
 
--   repo: https://github.com/leander-dsouza/ament-lint-pre-commit-hooks.git
-    rev: v0.0.3
+-   repo: git@github.com:leander-dsouza/ament-lint-pre-commit-hooks.git
+    rev: v0.0.4
     hooks:
     -   id: ament_lint_cmake_hook
     -   id: ament_cpplint_hook
