--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ament_lint_pre_commit_hooks
-version = 0.0.4
+version = 0.0.5
 description = Some out-of-the-box hooks for ament lint pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -25,13 +25,13 @@ python_requires = >=3.10
 
 [options.entry_points]
 console_scripts =
-    ament_lint_cmake_hook = ament_lint_pre_commit_hooks.ament_lint_cmake_hook:main
-    ament_cpplint_hook = ament_lint_pre_commit_hooks.ament_cpplint_hook:main
-    ament_uncrustify_hook = ament_lint_pre_commit_hooks.ament_uncrustify_hook:main
-    ament_xmllint_hook = ament_lint_pre_commit_hooks.ament_xmllint_hook:main
-    ament_flake8_hook = ament_lint_pre_commit_hooks.ament_flake8_hook:main
-    ament_pep257_hook = ament_lint_pre_commit_hooks.ament_pep257_hook:main
-    ament_mypy_hook = ament_lint_pre_commit_hooks.ament_mypy_hook:main
+    ament_lint_cmake = ament_lint_pre_commit_hooks.ament_lint_cmake:main
+    ament_cpplint = ament_lint_pre_commit_hooks.ament_cpplint:main
+    ament_uncrustify = ament_lint_pre_commit_hooks.ament_uncrustify:main
+    ament_xmllint = ament_lint_pre_commit_hooks.ament_xmllint:main
+    ament_flake8 = ament_lint_pre_commit_hooks.ament_flake8:main
+    ament_pep257 = ament_lint_pre_commit_hooks.ament_pep257:main
+    ament_mypy = ament_lint_pre_commit_hooks.ament_mypy:main
 
 [mypy]
 explicit_package_bases = true
