--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,48 +1,48 @@
--   id: ament_lint_cmake_hook
-    name: ament_lint_cmake_hook
+-   id: ament_lint_cmake
+    name: ament_lint_cmake
     description: Check CMake code style using cmakelint.
     language: python
-    entry: ament_lint_cmake_hook
+    entry: ament_lint_cmake
     types: [cmake]
 
--   id: ament_cpplint_hook
-    name: ament_cpplint_hook
+-   id: ament_cpplint
+    name: ament_cpplint
     description: Code style checking using cpplint.
     language: python
-    entry: ament_cpplint_hook
+    entry: ament_cpplint
     types: [c++]
 
--   id: ament_uncrustify_hook
-    name: ament_uncrustify_hook
+-   id: ament_uncrustify
+    name: ament_uncrustify
     description: Code style checking using uncrustify.
     language: python
-    entry: ament_uncrustify_hook
+    entry: ament_uncrustify
     types: [c++]
 
--   id: ament_xmllint_hook
-    name: ament_xmllint_hook
+-   id: ament_xmllint
+    name: ament_xmllint
     description: Check XML markup using xmllint.
     language: python
-    entry: ament_xmllint_hook
+    entry: ament_xmllint
     types: [xml]
 
--   id: ament_flake8_hook
-    name: ament_flake8_hook
+-   id: ament_flake8
+    name: ament_flake8
     description: Check Python code style using flake8.
     language: python
-    entry: ament_flake8_hook
+    entry: ament_flake8
     types: [python]
 
--   id: ament_pep257_hook
-    name: ament_pep257_hook
+-   id: ament_pep257
+    name: ament_pep257
     description: Check Python code style using pep257.
     language: python
-    entry: ament_pep257_hook
+    entry: ament_pep257
     types: [python]
 
--   id: ament_mypy_hook
-    name: ament_mypy_hook
+-   id: ament_mypy
+    name: ament_mypy
     description: Check Python code style using mypy.
     language: python
-    entry: ament_mypy_hook
+    entry: ament_mypy
     types: [python]
