--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,8 +17,8 @@ repos:
     hooks:
     -   id: codespell
 
--   repo: git@github.com:leander-dsouza/ament-lint-pre-commit-hooks.git
-    rev: v0.0.5
+-   repo: https://github.com/leander-dsouza/ament-lint-pre-commit-hooks.git
+    rev: v0.0.6
     hooks:
     -   id: ament_lint_cmake
     -   id: ament_cpplint
