Rearrange hooks in alphabetical order and update version.
Signed-off-by: Leander Stephen D'Souza <leanderdsouza1234@gmail.com>

--- a/ament_lint_pre_commit_hooks/Dockerfile
+++ b/ament_lint_pre_commit_hooks/Dockerfile
@@ -1,6 +1,6 @@
 FROM ros:rolling
 
-# Install ament_lint
+# Install ament_lint and ament_mypy
 RUN apt-get update && \
     apt-get install -y \
     ros-rolling-ament-lint \
